@@ -1,3 +1,7 @@
+= master
+
+* Do not modify the render plugin's cache if loading the plugin multiple times (jeremyevans)
+
 = 2.23.0 (2017-02-24)
 
 * Add :inherit_cache render plugin option, to create a copy of the cache for subclasses, instead of using an empty cache (jeremyevans)
